<resources>
    <string name="app_name">4x4 Tic-Tac-Toe</string>
    <string name="one_player">One Player</string>
    <string name="two_players">Two Players</string>
    <string name="settings">Settings</string>
    <string name="records">Records</string>
    <string name="title">TIC-TAC-TOE</string>
    <string name="boardtitle">Board</string>
    <string name="board3x3">3x3</string>
    <string name="board4x4">4x4</string>
    <string name="difficultytitle">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="firstmovetitle">First Move</string>
    <string name="firstmoveX">X</string>
    <string name="firstmoveO">O</string>
    <string name="firstmoveXO">XO</string>
    <string name="start">Start</string>

</resources>
