<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray">


    <Button
    android:id="@+id/oneplayerbutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="160dp"
    android:layout_marginLeft="160dp"
    android:layout_marginTop="300dp"
    android:layout_marginEnd="160dp"
    android:layout_marginRight="160dp"
    android:text="@string/one_player"
    android:onClick="launchOnePlayerGame"
    android:backgroundTint="@android:color/transparent"
    android:textColor="@color/blue"
    android:textSize="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.333"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/twoplayerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/red"
        android:textSize="30dp"
        android:onClick="launchOnePlayerGame"
        android:text="@string/two_players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settingsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:text="@string/settings"
        android:onClick="launchOnePlayerGame"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginLeft="192dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="192dp"
        android:layout_marginRight="192dp"
        android:text="@string/title"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@android:color/white"
        android:textSize="70dp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>