<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginLeft="192dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="192dp"
        android:layout_marginRight="192dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/settings"
        android:textColor="@android:color/black"
        android:textSize="70dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!--android:layout_above="@id/boardradiogroup"-->


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/boardtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boardtitle"
            android:layout_centerHorizontal="true"/>


        <RadioGroup
            android:id="@+id/boardradiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/boardtitle"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/board3x3radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board3x3"/>
            <RadioButton
                android:id="@+id/board4x4radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board4x4"/>

        </RadioGroup>

        <TextView
            android:id="@+id/firstmovetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boardtitle"
            android:layout_centerHorizontal="true"/>


        <RadioGroup
            android:id="@+id/boardradiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/boardtitle"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/board3x3radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board3x3"/>
            <RadioButton
                android:id="@+id/board4x4radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board4x4"/>

        </RadioGroup>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>